--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,9 +2,9 @@
     <ion-content>
         <div class="hero slide-up" style="background-image: url('img/login.png');">
             <div class="blabla">
-                <div class="avatar" style="background-image: url('img/ionic.png');"></div>
+                <div class="avatar" style="background-image: url('{{user.avatar}}');"></div>
                 <h3><a class="light">{{user.name}}</a></h3>
-                <h4>{{user.age}} anos</h4>
+                <h4><div class="meucu">{{user.age}} anos</div></h4>
             </div>
         </div>
         <span class="labels"></br></span>
