--- a/www/templates/activateAccount.html
+++ b/www/templates/activateAccount.html
@@ -8,6 +8,7 @@
         </label>
 
         <div class="padding-bla">
+          Verifique a sua chave no e-mail.
           <input type="submit" class="button button-block button-calm" ng-click="confirmEmail(confirm_token)" value="Entrar com a chave" />
         </div>
       </div>
