--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,10 @@
 <ion-side-menus enable-menu-with-back-views="true">
   <ion-nav-bar class="bar bar-light">
     <ion-nav-back-button ></ion-nav-back-button>
+    <ion-nav-buttons side="right">
+        <button class="button-icon icon ion-gear-b" ui-sref="app.editprofile">
+        </button>
+    </ion-nav-buttons>
   </ion-nav-bar>  <ion-side-menu-content>
     <ion-nav-view name="menuContent"><ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
 
