--- a/www/templates/registerEmail.html
+++ b/www/templates/registerEmail.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view view-title="Cadastre-se">
 
   <ion-content scroll="false" ng-class="{expanded:$scope.isExpanded}">
     <div class="padding-register">
