--- a/www/templates/matches.html
+++ b/www/templates/matches.html
@@ -1,4 +1,4 @@
-<ion-view >
+<ion-view view-title="Matches">
 
   <ion-content overflow-scroll="false">
 
@@ -15,4 +15,22 @@
       </ion-list>
     </div>
   </ion-content>
+  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
+
+    <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
+      icon-off="ion-compass" ng-click="allLocations()">
+    </ion-tab>
+
+    <ion-tab icon-on="ion-chatbubble-working" icon-off="ion-chatbubble-working"
+      ui-sref="app.matches">
+    </ion-tab>
+
+    <ion-tab icon-on="ion-ios-gear" icon-off="ion-ios-gear-outline">
+    </ion-tab>
+
+    <ion-tab icon-on="ion-ios-person" icon-off="ion-ios-person-outline"
+      ui-sref="app.profile">
+    </ion-tab>
+
+  </ion-tabs>
 </ion-view>
