--- a/www/templates/message.html
+++ b/www/templates/message.html
@@ -2,16 +2,24 @@
   <ion-content>
     <refresher></refresher>
 
-    <div ng-repeat="message in messages | orderBy:'created_at'" type="item-text-wrap" ng-show="message.content">
-      <div class="card item-message">
-        <div class="item-message-header">
-          <div class="row">
-            <small class="col">{{message.created_by}}:</small>
-            <small class="col text-right">{{message.created_at | date: 'short' }}</small>
-          </div>
-        </div>
-        <div class="item-message-body item-text-wrap">
+    <div ng-repeat="message in messages | orderBy:'created_at'">
+      <div class="chat-bubble left" ng-if="message.email !== user.email">
+        <div class="message" ng-bind-html="message.content | nl2br" autolinker>
           {{message.content}}
+        </div>
+        <div class="message-detail">
+          <span class="bold">{{message.created_by}}</span>
+          <span class="date" am-time-ago="">{{message.created_at | date: 'dd/MM/yy HH:mm'}}</span>
+        </div>
+
+      </div>
+      <div class="chat-bubble right" ng-if="message.email === user.email">
+        <div class="message" ng-bind-html="message.content | nl2br" autolinker>
+          {{message.content}}
+        </div>
+        <div class="message-detail">
+          <span class="bold">{{message.created_by}}</span>
+          <span class="date" am-time-ago="">{{message.created_at | date: 'dd/MM/yy HH:mm'}}</span>
         </div>
       </div>
     </div>
@@ -27,4 +35,19 @@
       </form>
     </div>
   </div>
+  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
+
+    <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
+      icon-off="ion-compass" ng-click="allLocations()">
+    </ion-tab>
+
+    <ion-tab icon-on="ion-chatbubble-working" icon-off="ion-chatbubble-working"
+      ui-sref="app.matches">
+    </ion-tab>
+
+    <ion-tab icon-on="ion-ios-person" icon-off="ion-ios-person-outline"
+      ui-sref="app.profile">
+    </ion-tab>
+
+  </ion-tabs>
 </ion-view>
