--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,6 +11,114 @@
 #bar-footer-message-box .list {
   width: 100%;
 }
+.bold {
+  font-weight: bold;
+}
+.footer-bar-custom {
+  background: #455D87;
+  color: #F6F7F0;
+  height: 44px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  z-index: 5
+}
+.footer-bar-custom .item-left, .footer-bar-custom .item-center, .footer-bar-custom .item-right {
+  position: absolute;
+  width: 30px
+}
+.footer-bar-custom .item-left {
+  left: 10px
+}
+.footer-bar-custom .item-center {
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%)
+}
+.footer-bar-custom .item-right {
+  right: 10px
+}
+.message-detail .date {
+  margin-left: 7vh;
+}
+.chat-bubble {
+  border-radius: 5px;
+  display: inline-block;
+  padding: 10px 18px;
+  position: relative;
+  margin: 10px;
+  max-width: 80%;
+}
+.chat-bubble:before {
+  content: "\00a0";
+  display: block;
+  height: 16px;
+  width: 9px;
+  position: absolute;
+  bottom: -7.5px;
+}
+.chat-bubble.left {
+  background-color: #e6e5eb;
+  float: left;
+}
+.chat-bubble.left:before {
+  background-color: #e6e5eb;
+  left: 10px;
+  -webkit-transform: rotate(70deg) skew(5deg);
+}
+.chat-bubble.right {
+  background-color: #1C8BB3;
+  color: #fff;
+  float: right;
+}
+.chat-bubble.right:before {
+  background-color: #1C8BB3;
+  right: 10px;
+  -webkit-transform: rotate(118deg) skew(-5deg);
+}
+.chat-bubble.right a.autolinker {
+  color: #fff;
+  font-weight: bold;
+}
+.user-message {
+  /*text-align: right;*/
+}
+.other-message {
+  /*text-align: left;;*/
+}
+.footer-btn {
+  /*position: absolute !important;
+  bottom: 0;*/
+  width: auto;
+  margin: auto 0;
+}
+.item-input-wrapper {
+  background-color: #E6E5EB !important;
+  margin-left: 1vh;
+  margin-right: 1vh;
+  width: 10px;
+}
+.footer-btn-wrap {
+  position: relative;
+  height: auto;
+  width: auto;
+  top: 3vh;
+  background-color: #F8F8F8;
+  margin-right: 12vh;
+  text-align: center;
+}
+.footer-bar-custom{
+  height: 100px !important;
+}
+.text-message{
+  width:0;
+}
+.text-message input{
+  width: 100%;
+  background-color: red;
+}
 
 .popup-buttons.row {
   background-color: orange;
@@ -30,7 +138,7 @@
 
 .meucu {
   position: relative;
-  left: 30px;
+  left: -10px;
   top: 35px;
 }
 
@@ -48,12 +156,12 @@
   position: relative;
   font-size: 18pt;
   top: 40px;
-  left: 40px;
+  left: 50px;
 }
 
 .blabla {
   position: relative;
-  top: 40px;
+  top: 45px;
 }
 
 .woman-class {
