--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,7 +2,7 @@
     <ion-content>
         <div class="hero slide-up" style="background-image: url('img/login.png');">
             <div class="blabla">
-                <div class="avatar" style="background-image: url('{{user.avatar}}');"></div>
+                <div class="avatar" style="background-image: url('data:image/jpeg;base64,{{user.avatar}}');"></div>
                 <h3><a class="light">{{user.name}}</a></h3>
                 <h4><div class="meucu">{{user.age}} anos</div></h4>
             </div>
@@ -40,9 +40,6 @@
 
       <ion-tab icon-on="ion-chatbubble-working" icon-off="ion-chatbubble-working"
         ui-sref="app.matches">
-      </ion-tab>
-
-      <ion-tab icon-on="ion-ios-gear" icon-off="ion-ios-gear-outline">
       </ion-tab>
 
       <ion-tab icon-on="ion-ios-person" icon-off="ion-ios-person-outline"
