--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,6 +11,11 @@
 #bar-footer-message-box .list {
   width: 100%;
 }
+.cuzaum {
+  position: relative;
+  left: calc(50% - 50px);
+}
+
 .bold {
   font-weight: bold;
 }
@@ -138,7 +143,7 @@
 
 .meucu {
   position: relative;
-  left: -10px;
+  right: calc(5% - 5px);
   top: 35px;
 }
 
@@ -156,7 +161,7 @@
   position: relative;
   font-size: 18pt;
   top: 40px;
-  left: 50px;
+  left: calc(20% - 20px);
 }
 
 .blabla {
