--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -12,18 +12,18 @@
         <!-- <p ng-repeat="img in user.gallery">
           <img ng-src="{{img}}"/>
         </p> -->
-        <div class="tabs tabs-light tabs-icon-only static">
+        <div class="tabs tabs-light tabs-icon-only static ">
             <a class="tab-item">
-                <i class="icon ion-ios-location"></i>
+                <i class="icon mcfly"></i>
             </a>
             <a class="tab-item">
-                <i class="icon ion-ios-location"></i>
+                <i class="icon mcfly"></i>
             </a>
             <a class="tab-item">
-                <i class="icon ion-ios-location"></i>
+                <i class="icon mcfly"></i>
             </a>
             <a class="tab-item">
-                <i class="icon ion-ios-location"></i>
+                <i class="icon mcfly"></i>
             </a>
             <a class="tab-item">
                 <i class="icon"></i>
@@ -32,7 +32,7 @@
         <!-- <a ui-sref="app.editprofile">Cadastre-se</a> -->
         <ion-gallery ion-gallery-items="galleryitems" ion-gallery-toggle="false"></ion-gallery>
     </ion-content>
-    <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
+    <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only tabs-color-positive">
 
       <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
         icon-off="ion-compass" ng-click="allLocations()">
@@ -40,6 +40,14 @@
 
       <ion-tab icon-on="ion-chatbubble-working" icon-off="ion-chatbubble-working"
         ui-sref="app.matches">
+      </ion-tab>
+
+      <ion-tab icon-on="ion-camera" icon-off="ion-camera"
+        ui-sref="">
+      </ion-tab>
+
+      <ion-tab icon-on="ion-ios-bell" icon-off="ion-ios-bell"
+        ui-sref="">
       </ion-tab>
 
       <ion-tab icon-on="ion-ios-person" icon-off="ion-ios-person-outline"
