--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -1,6 +1,12 @@
 <ion-view view-title="Informe onde você está">
   <ion-content ng-init="allLocations()"overflow-scroll="false">
-    <ion-list ng-repeat="location in locations">
+
+    <label class="item item-input">
+      <i class="icon ion-search placeholder-icon"></i>
+      <input type="text" placeholder="Buscar" ng-model="search.name">
+    </label>
+
+    <ion-list ng-repeat="location in locations | filter:search">
       <a class="item item-thumbnail-left" ng-click="doCheckin(location)">
         <img ng-src="{{location.image}}"/>
         <h2>{{location.name}}</h2>
