--- a/www/css/style.css
+++ b/www/css/style.css
@@ -17,6 +17,7 @@
   height: 100%;
   background-image: url('/img/local_map.png');
   background-size:contain;
+  margin-top: 10
 }
 .cuzaum {
   position: relative;
@@ -337,7 +338,7 @@ a,
   background-size: cover;
   box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
   color: #fff;
-  height: 200px;
+  height: 250px;
   position: relative;
   text-align: center;
   -webkit-transition: all 1s cubic-bezier(0.55, 0, 0.1, 1);
