--- a/www/templates/message.html
+++ b/www/templates/message.html
@@ -35,7 +35,7 @@
       </form>
     </div>
   </div>
-  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only tabs-color-positive">
+  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
 
     <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
       icon-off="ion-compass" ng-click="allLocations()">
