--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -13,7 +13,7 @@
       </a>
     </ion-list>
   </ion-content>
-  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only tabs-color-positive">
+  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
 
     <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
       icon-off="ion-compass" ng-click="allLocations()">
