--- a/www/templates/matches.html
+++ b/www/templates/matches.html
@@ -15,7 +15,7 @@
       </ion-list>
     </div>
   </ion-content>
-  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only tabs-color-positive">
+  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
 
     <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
       icon-off="ion-compass" ng-click="allLocations()">
