--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -29,8 +29,6 @@
         <!-- <p ng-repeat="img in user.gallery">
           <img ng-src="{{img}}"/>
         </p> -->
-
-
         <!-- <a ui-sref="app.editprofile">Cadastre-se</a> -->
         <ion-gallery ion-gallery-items="galleryitems" ion-gallery-toggle="false"></ion-gallery>
         <h1>Onde estou:</h1>
@@ -39,7 +37,7 @@
           <h2>{{user.last_place.name}}</h2>
         </a>
     </ion-content>
-    <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only tabs-color-positive">
+    <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
 
       <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
         icon-off="ion-compass" ng-click="allLocations()">
