--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -29,7 +29,7 @@
         <span class="labels"></br></span>
 
     </ion-content>
-    <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only tabs-color-positive">
+    <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
 
       <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
         icon-off="ion-compass" ng-click="allLocations()">
