Fix location page

--- a/www/templates/location.html
+++ b/www/templates/location.html
@@ -1,11 +1,11 @@
-<ion-view>
+<ion-view view-title="{{loc.name}}">
   <ion-content>
     <div>
-    </br>
+    <!-- </br>
     </br>
       <h2 >{{loc.name}}</h2>
     </div>
-    <img ng-src="{{loc.image}}"/>
+    <img ng-src="{{loc.image}}"/> -->
     <div class="list">
       <div class="row responsive-md" ng-if="$index % 2 === 0">
         <div class="col col-50" ng-repeat="user in loc.users" width="100%">
