--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -24,7 +24,7 @@
     </ion-tab>
 
     <ion-tab icon-on="ion-camera" icon-off="ion-camera"
-      ui-sref="">
+      ng-controller="LoginCtrl"ng-click="newPicture()">
     </ion-tab>
 
     <ion-tab icon-on="ion-ios-bell" icon-off="ion-ios-bell"
