--- a/www/templates/segundaTelaEdit.html
+++ b/www/templates/segundaTelaEdit.html
@@ -36,7 +36,7 @@
         <i class="icon ion-calendar"></i>
         <input type="range" name="age" ng-model="user.search_range" min="18" max="100" value="28">
       </div>
-      {{range}}
+      {{search_range}}
       <span class="labels"></br></span>
       <button class="sparara2" ng-click="updateProfile(user)" ui-sref="app.profile">Concluir</button>
     </div>
