--- a/www/templates/editProfile.html
+++ b/www/templates/editProfile.html
@@ -50,6 +50,38 @@
           </label>
         </div>
       </div>
+      <div class="damn">
+        Configurar busca
+      </div>
+      <div class="margin-grey-light">
+        Procurando por
+      </div>
+      <div class="row">
+        <div class="col col-50">
+          <div class="man-class" ng-if="!user.search_male" ng-click="user.search_male = !user.search_male">
+            <i class="icon ion-man"></i>
+          </div>
+          <div class="man-class-active" ng-if="user.search_male" ng-click="user.search_male = !user.search_male" ng-model="user.search_male">
+            <i class="icon ion-man man-class"></i>
+          </div>
+        </div>
+        <div class="col col-50">
+          <div ng-if="!user.search_female" ng-click="user.search_female = !user.search_female">
+            <i class="icon ion-woman woman-class"></i>
+          </div>
+          <div class="woman-class-active" ng-if="user.search_female" ng-click="user.search_female = !user.search_female" ng-model="user.search_female">
+            <i class="icon ion-woman woman-class"></i>
+          </div>
+        </div>
+      </div>
+      <div class="padding-tela1">
+        <div class="item range">
+          <i class="icon ion-calendar"></i>
+          <input type="range" name="age" ng-model="user.search_range" min="18" max="100" value="28">
+        </div>
+        {{user.search_range}}
+        <span class="labels"></br></span>
+      </div>
       <div>
       <p ng-repeat="img in images">
         <img ng-src="{{img}}"/>
