--- a/www/css/style.css
+++ b/www/css/style.css
@@ -837,3 +837,10 @@ a,
   background-color: #387ef5;
   background-image: linear-gradient(0deg, #0c63ee, #0c63ee 50%, transparent 50%);
   color: #fff; }
+
+.dot {
+	background: #28a54c;
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+}
