--- a/www/templates/location.html
+++ b/www/templates/location.html
@@ -1,12 +1,20 @@
 <ion-view view-title="{{loc.name}}">
   <ion-content>
-    <div>
-    </br>
-    </br>
-      <h2 >{{loc.name}}</h2>
-    </div>
     <!-- <img ng-src="{{loc.image}}"/> -->
-    <div class="list">
+    <div class="grid">
+        <div class="row" ng-repeat="user in loc.users" ng-if="$index % 2 === 0">
+            <div class="col col-50" ng-if="$index < loc.users.length">
+                <span class="eai" ng-if="user.status"></span>
+                <img ng-src="data:image/jpeg;base64,{{loc.users[$index].avatar}}" width="100%" ng-controller="UsersCtrl" ng-click="viewUser(user.token)"/>
+            </div>
+            <div class="col col-50" ng-if="$index + 1 < loc.users.length">
+                <span class="eai" ng-if="user.status"></span>
+                <img ng-src="data:image/jpeg;base64,{{loc.users[$index + 1].avatar}}" width="100%"/>
+            </div>
+
+        </div>
+    </div>
+    <!-- <div class="list">
        <ion-list ng-repeat="user in loc.users">
          <div class="item item-avatar item-button-right">
            <img ng-src="data:image/jpeg;base64,{{user.avatar}}"ng-controller="UsersCtrl" ng-click="viewUser(user.token)"/>
@@ -37,6 +45,6 @@
            </button>
          </div>
        </ion-list>
-     </div>
+     </div> -->
   </ion-content>
 </ion-view>
