--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -8,19 +8,20 @@
             </div>
             <div class="tabs tabs-light tabs-icon-only static ">
                 <a class="tab-item">
-                    <i class="icon mcfly"></i>
+                    <i ng-controller="locationsCtrl" ng-if="user.last_place" class="icon mcfly" style="background-image: url('{{user.last_place.image}}');" ng-click="viewLocation(user.last_place)"></i>
+                    <i ng-controller="locationsCtrl" ng-if="!user.last_place" class="icon mcfly" style="background-image: url('/img/local_map.png');"></i>
                 </a>
                 <a class="tab-item">
-                    <i class="icon mcfly"></i>
+                  <i class="icon mcfly" style="background-image: url('/img/local_map.png');"></i>
                 </a>
                 <a class="tab-item">
-                    <i class="icon mcfly"></i>
+                  <i class="icon mcfly" style="background-image: url('/img/local_map.png');"></i>
                 </a>
                 <a class="tab-item">
-                    <i class="icon mcfly"></i>
+                  <i class="icon mcfly" style="background-image: url('/img/local_map.png');"></i>
                 </a>
                 <a class="tab-item">
-                    <i class="icon"></i>
+                  <i class="icon mcfly" style="background-image: url('/img/local_map.png');"></i>
                 </a>
             </div>
         </div>
@@ -31,11 +32,11 @@
         </p> -->
         <!-- <a ui-sref="app.editprofile">Cadastre-se</a> -->
         <ion-gallery ion-gallery-items="galleryitems" ion-gallery-toggle="false"></ion-gallery>
-        <h1>Onde estou:</h1>
-        <a class="item item-thumbnail-left" ng-controller="locationsCtrl"ng-click="viewLocation(user.last_place)">
+        <!-- <h1>Onde estou:</h1> -->
+        <!-- <a class="item item-thumbnail-left" ng-controller="locationsCtrl"ng-click="viewLocation(user.last_place)">
           <img ng-src="{{user.last_place.image}}"/>
           <h2>{{user.last_place.name}}</h2>
-        </a>
+        </a> -->
     </ion-content>
     <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
 
