--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -5,7 +5,7 @@
                 <div class="avatar" style="background-image: url('data:image/jpeg;base64,{{user.avatar}}');"></div>
 
             </div>
-            <h3><a class="light">{{user.name}}</a></h3>
+            <div class="light">{{user.name}}</div>
             <h4><div class="meucu">{{user.age}} anos</div></h4>
             <div class="description">{{user.description}}</div>
             <div class="district">{{user.district}}, {{user.city}}</div>
